--- a/app/members/templates/members.html
+++ b/app/members/templates/members.html
@@ -3,7 +3,7 @@
 {% block app_content %}
 
     <div id="react-root"></div>
-    <script type="text/babel" src="{{ url_for('static', filename='react-admin.js') }}"></script>
+    <script type="text/babel" src="{{ url_for('static', filename='react-members.js') }}"></script>
     <!-- for react -->
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
