--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,11 +30,12 @@
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                {% if not current_user.is_anonymous %}
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('lobby.lobby') }}">Lobby</a></li>
-                    <li><a href="{{ url_for('admin.admin') }}">Admin</a></li>
                     <li><a href="{{ url_for('members.members') }}">Members</a></li>
                 </ul>
+                {% endif %}
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
@@ -42,8 +43,10 @@
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
+                {% if not current_user.is_anonymous %}
                 <span class="navbar-text hiddem-xs navbar-right">
                   Welcome, {{ current_user.username }} </span>
+                {% endif %}
             </div>
         </div>
     </nav>
