user profile page, setting status to inactive, changing password

--- a/app/admin/templates/email/welcome.html
+++ b/app/admin/templates/email/welcome.html
@@ -31,8 +31,7 @@ Cakeclub Account Creation
 <tr>
     <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
         Please note that this is not a secure password!<br/>
-        You are encouraged to change it using the password reset option on the
-        login screen.
+        You are encouraged to change it using the option on your profile page.
     </td>
 </tr>
 {% endblock %}
