--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('lobby.lobby') }}">Lobby</a></li>
                     <li><a href="{{ url_for('members.members') }}">Members</a></li>
+                    <li><a href="{{ url_for('profile.profile') }}">Profile</a></li>
                 </ul>
                 {% endif %}
                 <ul class="nav navbar-nav navbar-right">
